# MSPlayer

./: build.gradle  readme.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/meishe/msplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  CMakeLists.txt  JNICallbackHelper.cpp  JNICallbackHelper.h  MSPlayer.cpp  MSPlayer.h  VideoChannel.cpp  VideoChannel.h  jni_callback.cpp  jni_callback.h  log_util.h  ms_audio_channel.cpp  ms_base_channel.h  ms_safe_queue.h  ms_video_channel.cpp  ms_video_channel.h  ms_video_player.cpp  ms_video_player.h  ms_video_statel.h  native-lib.cpp  safe_queue.h  video_statel.h
app/src/main/cpp/ffmpeg/include/libavutil/: imgutils.h  mathematics.h
app/src/main/cpp/ffmpeg/include/libswresample/: swresample.h
app/src/main/java/com/meishe/msplayer/: AndroidOS.java  App.java  AvcEncoder.java  CaptureActivity.java  Constants.java  LaunchActivity.java  MSPlayer.java  MSPlayerActivity.java  MainActivity.java  PathUtils.java
app/src/main/java/com/meishe/msplayer/recorder/: MediaCodecRecorderActivity.java  PlayerLog.java  RecorderFragment.java
app/src/main/java/com/meishe/msplayer/recorder/camera/: CameraProxy.java  ICamera.java
app/src/main/java/com/meishe/msplayer/recorder/encoder/: MediaAudioEncoder.java  MediaEncoder.java  MediaMuxerManager.java  MediaVideoEncoder.java
app/src/main/res/layout/: activity_capture.xml  activity_launch.xml  activity_main.xml  activity_media_codec_recorder.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/meishe/msplayer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
